syntax = "proto3";

package com.github.multimoml.main;
option go_package = "com/github/multimoml/main";

service Config {
  rpc GetConfig (ConfigRequest) returns (ConfigResponse) {}
}

message ConfigRequest {
  string key = 1;
}

message ConfigResponse {
  string value = 1;
}